--- a/Lecture_notes/L0_input_output.ipynb
+++ b/Lecture_notes/L0_input_output.ipynb
@@ -85,7 +85,7 @@
       },
       "outputs": [],
       "source": [
-        "firstname = \"Ali\" # firstname is assigned with the value \"Kokchun\"\n",
+        "firstname = \"Ali\" # firstname is assigned with the value \"Ali\"\n",
         "lastname = \"Leylani\"\n",
         "age = 33\n",
         "\n",
