--- a/Lecture_notes/L2_while_statement.ipynb
+++ b/Lecture_notes/L2_while_statement.ipynb
@@ -84,7 +84,7 @@
         "year = 0\n",
         "\n",
         "while birds > 8000:\n",
-        "    print(f\"Year {year} there were {birds:.0f} birds\")\n",
+        "    print(f\"Year {year} there were {birds} birds\")\n",
         "    birds /= 2 # divide by half\n",
         "    year += 1\n",
         "\n",
