--- a/Code_alongs/L01_if_statements.ipynb
+++ b/Code_alongs/L01_if_statements.ipynb
@@ -51,6 +51,181 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Indeed, 10 är mindre än 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "if number_1 < number_2:\n",
+    "\n",
+    "    print(f'Indeed, {number_1} är mindre än {number_2}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Om villkoret inte evalueras till True, så hoppar Python över kodblocket"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if number_1 > number_2:     # villkoret stämmer inte, så det inskjutna kodblocket ignoreras \n",
+    "\n",
+    "    print(f'Hmm, {number_1} kanske är större än {number_2}?')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## IF-ELSE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Else är en kompanjon till If, och exekverar sin kod om villkoret till if-satsen inte är True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nej, 10 är definitivt mindre än 20!\n"
+     ]
+    }
+   ],
+   "source": [
+    "if number_1 > number_2:     # villkoret stämmer inte, så det inskjutna kodblocket ignoreras \n",
+    "\n",
+    "    print(f'Hmm, {number_1} kanske är större än {number_2}?')\n",
+    "\n",
+    "else:                       # det inskjutna kodblocket under denna körs därför istället\n",
+    "\n",
+    "    print(f'Nej, {number_1} är definitivt mindre än {number_2}!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## IF-ELIF-ELSE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ytterligare en kompanjon till If och Else. Den här ger oss fler möjligheter att testa olika villkor. Python kommer **endast** att exekvera ett kodblock i en if-elif-else kombination, nämligen det kodblocket för vilket villkoret evalueras till True."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vet du vad, 30 är lika med 30!\n"
+     ]
+    }
+   ],
+   "source": [
+    "number_1 = 30\n",
+    "number_2 = 30\n",
+    "\n",
+    "if number_1 > number_2:     # villkoret stämmer inte, så det inskjutna kodblocket ignoreras \n",
+    "\n",
+    "    print(f'Hmm, {number_1} kanske är större än {number_2}?')\n",
+    "\n",
+    "elif number_1 == number_2:  # villkoret stämmer!\n",
+    "\n",
+    "    print(f'Vet du vad, {number_1} är lika med {number_2}!')\n",
+    "\n",
+    "else:                       # eftersom att villkoret för elif redan var uppfyllt, \n",
+    "                            # så ignoreras även detta kodblock\n",
+    "\n",
+    "    print(f'Nej, {number_1} är definitivt mindre än {number_2}!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NESTED IF"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Det går väldigt bra att lägga in ytterligare if-elif-else satser, i redan befintliga if-elif-else satser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stör mig inte snälla, knacka endast på om du har snacks till mig\n"
+     ]
+    }
+   ],
+   "source": [
+    "visitor = input('Vem är du?')\n",
+    "\n",
+    "if visitor == 'Mamma':\n",
+    "\n",
+    "    has_candy = input('Har du godis till mig? Ja eller Nej')\n",
+    "\n",
+    "    if has_candy == 'Ja':\n",
+    "        print('Knacka på')\n",
+    "    \n",
+    "    else:\n",
+    "        print('Lämna mig ifred!')\n",
+    "\n",
+    "elif visitor == 'Kalle':\n",
+    "\n",
+    "    apology = input('Har du kommit för att be om ursäkt?')\n",
+    "\n",
+    "    if apology == 'Ja':\n",
+    "        print('Okey, knacka på då...')\n",
+    "\n",
+    "    else:\n",
+    "        prit('Jag hatar dig!!! GÅ HÄRIFRÅN')\n",
+    "\n",
+    "else:\n",
+    "\n",
+    "    print('Stör mig inte snälla, knacka endast på om du har snacks till mig')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
