--- a/Code_alongs/L01_if_statements.ipynb
+++ b/Code_alongs/L01_if_statements.ipynb
@@ -9,21 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "number_1 > number_2 evalueras till:  False\n",
-      "number_1 >= number_2 evalueras till: False\n",
-      "number_1 < number_2 evalueras till:  True\n",
-      "number_1 <= number_2 evalueras till: True\n",
-      "number_1 == number_2 evalueras till: False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "number_1 = 10\n",
     "number_2 = 20\n",
@@ -51,17 +39,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Indeed, 10 är mindre än 20\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if number_1 < number_2:\n",
     "\n",
@@ -77,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,17 +82,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Nej, 10 är definitivt mindre än 20!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if number_1 > number_2:     # villkoret stämmer inte, så det inskjutna kodblocket ignoreras \n",
     "\n",
@@ -134,22 +106,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ytterligare en kompanjon till If och Else. Den här ger oss fler möjligheter att testa olika villkor. Python kommer **endast** att exekvera ett kodblock i en if-elif-else kombination, nämligen det kodblocket för vilket villkoret evalueras till True."
+    "Ytterligare en kompanjon till If och Else. Den här ger oss fler möjligheter att testa olika villkor. Python kommer **endast** att exekvera ett kodblock i en if-elif-else kombination, nämligen det **första** kodblocket för vilket villkoret evalueras till True."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Vet du vad, 30 är lika med 30!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "number_1 = 30\n",
     "number_2 = 30\n",
@@ -184,17 +148,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Stör mig inte snälla, knacka endast på om du har snacks till mig\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "visitor = input('Vem är du?')\n",
     "\n",
