--- a/Code_alongs/L01_if_statements.ipynb
+++ b/Code_alongs/L01_if_statements.ipynb
@@ -181,6 +181,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## En viktig detalj!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Observera att Python utför kodblock om evalueras till True. Men inget stoppar dig från att helt ett skriva True direkt i ex. If-satsen. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if True:\n",
+    "\n",
+    "    print('Detta kodblock komma alltid att utföras!')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
