--- a/Code_alongs/L02_while_statement.ipynb
+++ b/Code_alongs/L02_while_statement.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vi kan re-assigna variabler (uppdatera deras värden) på bland annat följande förenkladea vis"
+    "Vi kan re-assigna variabler (uppdatera deras värden) på bland annat följande förenklade sätt"
    ]
   },
   {
@@ -151,9 +151,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Precis likt hur if-elif-else är kompanjoner, har while också en kompanjon: break.\n",
+    "Precis som hur if-elif-else är kompanjoner, har while också en kompanjon: break.\n",
     "\n",
-    "Om Python stöter på kommandot break medan den är i en while-loop så kommer Python direkt hoppa ur loopen (även ifall villkoret för loopen fortfarande är uppfyllt)"
+    "Om Python stöter på kommandot break någongång i en while-loop - så kommer den direkt avbryta och hoppa ur loopen (även ifall villkoret för loopen fortfarande är uppfyllt)"
    ]
   },
   {
@@ -170,7 +170,7 @@
     "    n+=1\n",
     "\n",
     "    if n == 3:           # här har vi dock en if-sats, vars villkor blir True när n = 3\n",
-    "        break            # Python kommer se denna break när n = 3, och hoppa ur hela while-loopen (trots att n < 5 fortfarande är sant)"
+    "        break            # Python kommer såldes se denna break när n = 3, och hoppa ur while-loopen (trots att n < 5 fortfarande är sant)"
    ]
   },
   {
