--- a/Code_alongs/L02_while_statement.ipynb
+++ b/Code_alongs/L02_while_statement.ipynb
@@ -87,7 +87,7 @@
     "fishes = 100                      # antal nuvarande fiskar\n",
     "year = 0                          # året vi startar ifrån\n",
     "\n",
-    "while fishes < 1000000:           # fortsätt loopa igenom och utföra kodblocket så länge antal fiskar är mindre än 1M\n",
+    "while fishes < 1000000:           # fortsätt loopa och upprepa kodblocket så länge antal fiskar är mindre än 1M\n",
     "\n",
     "    year += 1                     # incrementera (öka) året med 1\n",
     "    fishes *= 2                   # multiplicera antal fiskar med 2\n",
