--- a/code_alongs/L02_while_statement.ipynb
+++ b/code_alongs/L02_while_statement.ipynb
@@ -196,9 +196,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "Ha, vi lyckades ta oss ur!\n"
+     ]
+    }
+   ],
    "source": [
     "n = 1\n",
     "\n",
@@ -208,8 +235,17 @@
     "    n += 1\n",
     "\n",
     "    if n == 20:\n",
-    "        break            # den här break:en avslutar loopen"
+    "        break            # den här break:en avslutar loopen\n",
+    "\n",
+    "print('Ha, vi lyckades ta oss ur tillslut!')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
