--- a/code_alongs/L01_if_statements.ipynb
+++ b/code_alongs/L01_if_statements.ipynb
@@ -122,7 +122,7 @@
     "\n",
     "    print(f'Hmm, {number_1} kanske är större än {number_2}?')\n",
     "\n",
-    "elif number_1 == number_2:  # villkoret stämmer!\n",
+    "elif number_1 == number_2:  # villkoret stämmer, och det tillhörande kodblocket exekveras!\n",
     "\n",
     "    print(f'Vet du vad, {number_1} är lika med {number_2}!')\n",
     "\n",
@@ -191,7 +191,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Observera att Python utför kodblock om evalueras till True. Men inget stoppar dig från att helt ett skriva True direkt i ex. If-satsen. "
+    "Observera att Python utför kodblock om det givna villkoret evalueras till True. \n",
+    "\n",
+    "Men inget stoppar dig från att direkt skriva in True, istället för ett villkor. "
    ]
   },
   {
@@ -202,8 +204,15 @@
    "source": [
     "if True:\n",
     "\n",
-    "    print('Detta kodblock komma alltid att utföras!')"
+    "    print('Det inskjutna kodblocket kommer vid en sån här konstruktion alltid att utföras!')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
