--- a/code_alongs/L01_if_statements.ipynb
+++ b/code_alongs/L01_if_statements.ipynb
@@ -27,14 +27,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## IF-satser"
+    "## Fler jämförelser"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exekverar det intenderade kodblocket (den inskjutna) om villkoret till if-satsen evalueras till True"
+    "Python har stöd även för fler jämförelser samtidigt"
    ]
   },
   {
@@ -43,6 +43,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "age = 30\n",
+    "\n",
+    "print(f'25 < age < 30 evalueras till: {25 < age < 40}')\n",
+    "\n",
+    "print(f'25 < age < 28 evalueras till: {25 < age < 28}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Du kan givetvis använda vilka jämförelseoperationer du själv vill."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## IF-satser"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dessa satser exekverar det intenderade kodblocket (den inskjutna) undertll om villkoret till satsen evalueras till True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "number_1 = 10\n",
+    "number_2 = 20\n",
+    "\n",
     "if number_1 < number_2:\n",
     "\n",
     "    print(f'Indeed, {number_1} är mindre än {number_2}')"
