--- a/code_alongs/L00_input_output.ipynb
+++ b/code_alongs/L00_input_output.ipynb
@@ -274,7 +274,7 @@
    "id": "7992d41a",
    "metadata": {},
    "source": [
-    "## User input"
+    "## Input()"
    ]
   },
   {
@@ -282,7 +282,7 @@
    "id": "ce562d6d",
    "metadata": {},
    "source": [
-    "Vi kan be användaren om input på följande vis"
+    "Vi kan be användaren om en input genom att nyttja input()-funktionen. Argumentet till denna funktionen är texten som användaren kommer se när den ombeds skriva in ett svar."
    ]
   },
   {
