--- a/exercises/solutions/02_while_statement_solutions.ipynb
+++ b/exercises/solutions/02_while_statement_solutions.ipynb
@@ -213,7 +213,7 @@
         "## 4. Multiplication game (*)\n",
         "&nbsp; a) &nbsp; Create a multiplication game following this flow chart:\n",
         "\n",
-        "<img align=\"left\" src=\"../assets/Multiplication_game.png\" width=\"300\"/>"
+        "<img align=\"left\" src=\"../../assets/Multiplication_game.png\" width=\"300\"/>"
       ]
     },
     {
