--- a/exercises/solutions/02_while_statement_solutions.ipynb
+++ b/exercises/solutions/02_while_statement_solutions.ipynb
@@ -144,7 +144,7 @@
         "## 3. Guess number game (*)\n",
         "&nbsp; a) &nbsp; Create a guessing number game following this flow chart:\n",
         "\n",
-        "<img align=\"left\" src=\"../assets/guessing_game.png\" width=\"300\"/>"
+        "<img align=\"left\" src=\"../../assets/guessing_game.png\" width=\"300\"/>"
       ]
     },
     {
