--- a/exercises/solutions/02_while_statement_solutions.ipynb
+++ b/exercises/solutions/02_while_statement_solutions.ipynb
@@ -184,7 +184,7 @@
         "integer_to_guess = random.randint(1, 100)                    # genererar ett randomiserat tal i spannet 1-100\n",
         "print('Sådär, jag har nu valt en siffra mellan 1 och 100...')\n",
         "\n",
-        "while True:                                                  # kommer alltid fortsätta loopa, fram tills att det avslutas med en break\n",
+        "while True:                                                  # upprepa för alltid, fram tills att det avslutas med en break\n",
         "\n",
         "    user_guess = int(input('Gissa talet: '))\n",
         "\n",
@@ -246,7 +246,7 @@
         "\n",
         "user_score = 0\n",
         "\n",
-        "while True:                                                  # kommer alltid fortsätta loopa, fram tills att det avslutas med en break\n",
+        "while True:                                     # upprepa för alltid, fram tills att det avslutas med en break\n",
         "\n",
         "    x = random.randint(1, 10)\n",
         "    y = random.randint(1, 10)\n",
@@ -268,7 +268,7 @@
         "\n",
         "    if play_again == 'Nej':\n",
         "        \n",
-        "        break                                                # hoppar ur while-loopen om användaren inte vill spela längre\n",
+        "        break                                    # hoppar ur while-loopen om användaren inte vill spela längre\n",
         "\n",
         "print('Tack för att du var med och spelade vårt spel!')\n",
         "print(f'Din slutgiltiga poäng är {user_score}.')"
