--- a/exercises/00_Count_with_Python_exercise.ipynb
+++ b/exercises/00_Count_with_Python_exercise.ipynb
@@ -86,6 +86,17 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "plaintext"
+        }
+      },
+      "outputs": [],
+      "source": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "NDrFxEyTP3HO"
