--- a/exercises/03_for_statement_exercise.ipynb
+++ b/exercises/03_for_statement_exercise.ipynb
@@ -88,6 +88,17 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "plaintext"
+        }
+      },
+      "outputs": [],
+      "source": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "vUheZeUMPmVV"
