--- a/exercises/03_for_statement_exercise.ipynb
+++ b/exercises/03_for_statement_exercise.ipynb
@@ -111,7 +111,7 @@
         "c) Use nested for-loops, which means a for-loop in a for-loop. To format the table nicely, use **f-string**:\n",
         "\n",
         "```python\n",
-        "print(f\"{number :4}\", end = \"\")\n",
+        "print(f\"{number}\", end = \"\")\n",
         "```\n",
         "\n",
         "\n",
