--- a/lectures/L4_lists.ipynb
+++ b/lectures/L4_lists.ipynb
@@ -220,7 +220,7 @@
     "To plot simple graphs from lists, we use **matplotlib**. You need to install matplotlib and it is recommended that you install it with the dependency manager pipenv. \n",
     "\n",
     "```\n",
-    "pipenv install matplotlib\n",
+    "conda install matplotlib\n",
     "```\n",
     "\n",
     "Read more [w3schools - matplotlib](https://www.w3schools.com/python/matplotlib_intro.asp)"
