--- a/exercises/04_list_exercise.ipynb
+++ b/exercises/04_list_exercise.ipynb
@@ -253,7 +253,7 @@
       },
       "source": [
         "---\n",
-        "## 6. Monte Carlo simulation (**)\n",
+        "## 6. Monte Carlo simulation (***)\n",
         "\n",
         "&nbsp; a) Simulate 5000 uniformly distributed points between -1 and 1, $X\\sim U(-1,1)$. Now calculate the Euclidean distances between each point and the origin (0,0), $d_i = \\sqrt{x_i^2 + y_i^2}$. For $d_i < 1$ plot the point with one color, and for $d_i > 1$ plot the point in another color, $i = \\{1,\\ldots, 5000\\}$.  (**)\n",
         "\n",
@@ -301,7 +301,7 @@
       },
       "source": [
         "---\n",
-        "## 7. A cute rabbit among two ferocious snakes (**)\n",
+        "## 7. A cute rabbit among two ferocious snakes (***)\n",
         "\n",
         "There are three identical doors, behind two of them, there are ferocious snakes and behind one of them is a cute little rabbit. Your aim is to pick a door and get the cute rabbit. You start picking one door randomly and suddenly another door opens and snake slithers away *pssss*. Now you have a choice to either stay with your door or change to the remaining door.\n",
         "\n",
@@ -340,6 +340,11 @@
         "\n",
         "</details>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
     }
   ],
   "metadata": {
