--- a/code_alongs/L5_strings.ipynb
+++ b/code_alongs/L5_strings.ipynb
@@ -1,517 +1,244 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "firstname = 'ali'            #antingen singel citat-tecken\n",
-    "lastname = \"leylani\"      # eller dubbel. Båda går bra\n",
-    "\n",
-    "phone_number = 112"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
+  "cells": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ali leylani\n"
-     ]
-    }
-   ],
-   "source": [
-    "full_name = f'{firstname} {lastname}'\n",
-    "print(full_name)\n",
-    "\n",
-    "another_full_name = firstname + \" \" + lastname\n",
-    "print(another_full_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "firstname: ali, lastname: leylani, phone_number: 112\n"
-     ]
-    }
-   ],
-   "source": [
-    "contact_details = f'firstname: {firstname}, lastname: {lastname}, phone_number: {phone_number}'\n",
-    "\n",
-    "print(contact_details)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "firstname: ali,\n",
-      "lastname: leylani,\n",
-      "phone_number: 112\n",
-      "hasdjahsda\n",
-      "dasdasd\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "contact_details = f'''\n",
-    "firstname: {firstname},\n",
-    "lastname: {lastname},\n",
-    "phone_number: {phone_number}\n",
-    "hasdjahsda\n",
-    "dasdasd\n",
-    "'''\n",
-    "\n",
-    "print(contact_details)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['word', 'another', 'a third word', 'etcetera']\n"
-     ]
-    }
-   ],
-   "source": [
-    "min_lista = ['word','another','a third word', 'etcetera']\n",
-    "\n",
-    "print(min_lista)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "word\n",
-      "another\n",
-      "a third word\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(min_lista[0])\n",
-    "print(min_lista[1])\n",
-    "print(min_lista[2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "full_name = 'Ali Leylani'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A\n",
-      "l\n",
-      "i\n",
-      " \n",
-      "L\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(full_name[0])\n",
-    "print(full_name[1])\n",
-    "print(full_name[2])\n",
-    "print(full_name[3])\n",
-    "print(full_name[4])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'i'"
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "view-in-github"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/aleylani/Python/blob/main/Lecture_notes/L5_strings.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "full_name[-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ali leylani\n"
-     ]
-    }
-   ],
-   "source": [
-    "another_full_name = firstname + \" \" + lastname\n",
-    "print(another_full_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['word', 'another', 'a third word', 'etcetera']"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "min_lista"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "my_desired_word = min_lista[2]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "upper() och lower() funktionerna"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ALI'"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "\n",
-    "firstname.upper() # gör om strängen till stora bokstäver"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ALI\n"
-     ]
-    }
-   ],
-   "source": [
-    "firstname = firstname.upper()\n",
-    "print(firstname)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "split(), den här kan ni använda för att splitta strängar"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "long_string = 'Det är så sjuuukt roligt att lära sig list comprehension'\n",
-    "another_string = 'Jaaa, ibland är det sjysst att ba chilla. Eller hur, vad tycker du?'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Jaaa, ibland är det sjysst att ba chilla. Eller hur, vad tycker du?']"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "another_string.split('ö')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Det',\n",
-       " 'är',\n",
-       " 'så',\n",
-       " 'sjuuukt',\n",
-       " 'roligt',\n",
-       " 'att',\n",
-       " 'lära',\n",
-       " 'sig',\n",
-       " 'list',\n",
-       " 'comprehension']"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "long_string.split(' ')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "zip()-funktioner"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('A', 1)\n",
-      "('B', 2)\n",
-      "('C', 3)\n"
-     ]
-    }
-   ],
-   "source": [
-    "letters = ['A','B','C']\n",
-    "numbers = [1,2,3]\n",
-    "\n",
-    "for x in zip(letters, numbers):\n",
-    "\n",
-    "    print(x)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "my letter is now A and number is 1\n",
-      "my letter is now B and number is 2\n",
-      "my letter is now C and number is 3\n"
-     ]
-    }
-   ],
-   "source": [
-    "letters = ['A','B','C']\n",
-    "numbers = [1,2,3]\n",
-    "\n",
-    "for letter, number in zip(letters, numbers):\n",
-    "\n",
-    "    print(f'my letter is now {letter} and number is {number}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# len()\n",
-    "\n",
-    "rätt nice funktion för att ta reda på längden av olika saker"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['A', 'B', 'C']\n"
-     ]
     },
     {
-     "data": {
-      "text/plain": [
-       "3"
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "l4vzc0A1VKlT"
+      },
+      "source": [
+        "---\n",
+        "# Lecture notes - strings\n",
+        "\n",
+        "---\n",
+        "This is the lecture note for **strings**, but it's built upon contents from previous lectures such as:\n",
+        "- input-output\n",
+        "- variables\n",
+        "- if-statement\n",
+        "- for loop\n",
+        "- while\n",
+        "- lists\n",
+        "- random\n",
+        "\n",
+        "strings are arrays of bytes that represents unicode characters\n",
+        "\n",
+        "<p class = \"alert alert-info\" role=\"alert\"><b>Note</b> that this lecture note gives a brief introduction to strings. I encourage you to read further about strings, when there is some functionality that you need.  \n",
+        "\n",
+        "Read more [w3schools - strings](https://www.w3schools.com/python/python_strings.asp)\n",
+        "\n",
+        "---"
       ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(letters)\n",
-    "len(letters)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ali Leylani\n"
-     ]
     },
     {
-     "data": {
-      "text/plain": [
-       "11"
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6uSf0BFgVKlV"
+      },
+      "source": [
+        "## Concatenate strings"
       ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(full_name)\n",
-    "len(full_name)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ni kan använda .islower() och .isupper() för att se om en viss bokstav är stor eller liten"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [
+    },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n",
-      "True\n",
-      "True\n"
-     ]
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "4-37tOYEVKlV",
+        "outputId": "2db41d42-2ab1-4094-bb4f-5134ff18cfb7"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Name: Ali Leylani\n",
+            "School: IT-Högskolan\n",
+            "Adress: Ebbe Lieberathsgatan 18C, 412 65 Göteborg\n",
+            "Phone: 112\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "firstname = \"Ali\"\n",
+        "lastname = \"Leylani\"\n",
+        "\n",
+        "fullname = firstname + \" \" + lastname # concatenating strings\n",
+        "school = \"IT-Högskolan\"\n",
+        "address = \"Ebbe Lieberathsgatan 18C, 412 65 Göteborg\"\n",
+        "phone = \"112\"\n",
+        "\n",
+        "# multiline f-string\n",
+        "contact_details = f\"\"\"\n",
+        "Name: {fullname}\n",
+        "School: {school}\n",
+        "Adress: {address}\n",
+        "Phone: {phone}\n",
+        "\"\"\"\n",
+        "\n",
+        "print(contact_details)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "B-RVOsPJVKlW"
+      },
+      "source": [
+        "---\n",
+        "### Concatenate with loop"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "jOZYIsD_VKlW"
+      },
+      "outputs": [],
+      "source": [
+        "bamba = [\"Chili sin carne\", \"Nudlar\", \"Pokebowl\", \"Pannkakor\", \"Tacos\"]\n",
+        "days = [\"Må\", \"Ti\", \"On\", \"To\", \"Fr\"]\n",
+        "\n",
+        "menu = \"Veckomeny\\n\" # \\n gives newline\n",
+        "\n",
+        "for day, food in zip(days, bamba):\n",
+        "    menu += f\"{day}: {food} \\n\"\n",
+        "\n",
+        "print(menu)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OaW0nvKLVKlX"
+      },
+      "source": [
+        "---\n",
+        "## Indexing\n",
+        "\n",
+        "- a string is an array of bytes that represents unicode characters\n",
+        "- use the indexing operator [] to access elements\n",
+        "- combine with slice operator : to get a section in the string"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "TnQo8BuWVKlX"
+      },
+      "outputs": [],
+      "source": [
+        "# note the different types of quotes, can't use '' for denoting string here, as ' is already used\n",
+        "quote = \"!False - it's funny because it's True\"\n",
+        "print(f\"quote[0]: {quote[0]}\")\n",
+        "print(f\"quote[5]: {quote[5:10]}\") # [start:end-1]\n",
+        "print(f\"quote[-4]: {quote[-4]}\") # indexing starting from the end\n",
+        "print(f\"quote[-4:]: {quote[-4:]}\") # slice from -4 to the end\n",
+        "print(f\"Backwards quote[::-1]: {quote[::-1]}\") # reversing"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SCL18AMiVKlY"
+      },
+      "source": [
+        "---\n",
+        "## Split a string\n",
+        "- splitting a string\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "aWhvU3U1VKlY"
+      },
+      "outputs": [],
+      "source": [
+        "subjects = \"Math, biology  ,   cHeMistry  ,  PrOgramming      \"\n",
+        "subjects = subjects.split(\",\") # argument defines the pattern which the string should be splitted\n",
+        "\n",
+        "subjects = [subject.strip().upper() for subject in subjects] # strips and make uppercase\n",
+        "\n",
+        "for subject in subjects:\n",
+        "    print(f\"{subject} has {len(subject)} letters\")\n",
+        "    # len() returns the number of items, for a string it returns the number of characters"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Ylt_qR7xVKla"
+      },
+      "outputs": [],
+      "source": [
+        "# mean from input\n",
+        "numbers = input(\"Ange några tal separerade med mellanslag: \").split()\n",
+        "numbers = [float(number) for number in numbers]\n",
+        "\n",
+        "sum = 0\n",
+        "\n",
+        "for number in numbers:\n",
+        "    sum += number\n",
+        "\n",
+        "mean = sum/len(numbers)\n",
+        "print(f\"Medelvärdet av dina tal är {mean:.1f}\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OpBf2YQtVKlb"
+      },
+      "source": [
+        "---\n",
+        "## String methods\n",
+        "\n",
+        "There are many string methods available, reference [w3schools - string methods](https://www.w3schools.com/python/python_strings_methods.asp) when you need a specific method"
+      ]
     }
-   ],
-   "source": [
-    "print('A'.islower())  \n",
-    "print('a'.islower())\n",
-    "\n",
-    "print('A'.isupper())"
-   ]
+  ],
+  "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3 (ipykernel)",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.8.13"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "0da836a34428266995a795f1e1e27b816fa1c02f148d9728b3fbbbc5459afca6"
+      }
+    }
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "deeplearning",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.4"
-  },
-  "orig_nbformat": 4
- },
- "nbformat": 4,
- "nbformat_minor": 2
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
