--- a/code_alongs/L04_lists.ipynb
+++ b/code_alongs/L04_lists.ipynb
@@ -369,8 +369,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "en_operation = [x**2+x+5 for x in range(0,4)]  # läses x upphöjt till tre för alla x i spannet (0,4)\n",
-    "\n",
+    "en_operation = [x**2+x+5 for x in range(0,4)] \n",
     "print(en_operation)"
    ]
   },
