--- a/exercises/solutions/03_for_statement_solutions.ipynb
+++ b/exercises/solutions/03_for_statement_solutions.ipynb
@@ -69,17 +69,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "-10 -9 -8 -7 -6 -5 -4 -3 -2 -1 0 1 2 3 4 5 6 7 8 9 10 "
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "for i in range(-10, 11):                   # låt variabeln i loopa från -10 till 10. kom ihåg att 11 inte inkluderas av range()\n",
         "\n",
@@ -95,17 +87,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "-10 -8 -6 -4 -2 0 2 4 6 8 10 "
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "for i in range(-10, 11, 2):                # låt variabeln i loopa från -10 till 10, i steg om två!\n",
         "\n",
@@ -148,17 +132,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "5050\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "summa = 0                          # initiera en variabel som vi kommer vilja addera alla termer till\n",
         "\n",
@@ -178,17 +154,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "2500\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "summa = 0                          # initiera en variabel som vi kommer vilja addera alla termer till\n",
         "\n",
@@ -279,17 +247,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "0 6 12 18 24 30 36 42 48 54 60 "
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "tabell = 6                        # multiplikationstabellen vi vill beräkna\n",
         "\n",
@@ -313,17 +273,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "14 21 28 35 42 49 56 63 70 "
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "tabell = int(input('Vilken multiplikationstabell vill du beräkna?'))\n",
         "start = int(input('Vart vill du börja?'))\n",
@@ -348,27 +300,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "0 0 0 0 0 0 0 0 0 0 0 \n",
-            "0 1 2 3 4 5 6 7 8 9 10 \n",
-            "0 2 4 6 8 10 12 14 16 18 20 \n",
-            "0 3 6 9 12 15 18 21 24 27 30 \n",
-            "0 4 8 12 16 20 24 28 32 36 40 \n",
-            "0 5 10 15 20 25 30 35 40 45 50 \n",
-            "0 6 12 18 24 30 36 42 48 54 60 \n",
-            "0 7 14 21 28 35 42 49 56 63 70 \n",
-            "0 8 16 24 32 40 48 56 64 72 80 \n",
-            "0 9 18 27 36 45 54 63 72 81 90 \n",
-            "0 10 20 30 40 50 60 70 80 90 100 \n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "for tabell in range(0, 11):\n",
         "\n",
@@ -398,6 +332,23 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "n = int(input('Vilket n vill du ha?'))\n",
+        "\n",
+        "produkt = 1                                # initiera en variabel som vi kommer vilja successivt multiplicera med varje tal fram till n \n",
+        "\n",
+        "for number in range(1, n+1):               # vi loopar här mellan 1 till n, starta INTE från 0. Då kommer hela vår produkt bli noll\n",
+        "\n",
+        "    produkt *= number                      # multiplicera variabeln produkt med aktuellt värde av variabeln number\n",
+        "\n",
+        "print(f'n! = {produkt}')  "
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "QrbJGJygPmVW"
@@ -423,6 +374,24 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import random as rnd                                   # importera random, och ge den valfria aliaset rnd som kommer använda för att kalla på random\n",
+        "\n",
+        "secret_number = rnd.randint(1000,9999)                 # generera ett randomiserat fyrsiffrigt tal (mellan 1000 och 9999)\n",
+        "\n",
+        "for guess in range(1000, 10000):                       # loopa mellan alla tal mellan 1000 och 9999\n",
+        "\n",
+        "    if guess == secret_number:\n",
+        "\n",
+        "        print(f'Aha! Det hemliga talet är {guess}.')\n",
+        "        break                                          # detta är en detalj, men det är nice att lägga till en break här. Då slipper Python fortsätta sin for-loop efter att vi hittat vårt värde\n"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "H4DC6pSOPmVW"
@@ -434,6 +403,47 @@
         "In first square of the chessboard there is one grain of rice, in the second square there is two grains, in the third square there is four grains and so on. How many grains are there in the whole chessboard when all squares are filled using this pattern?\n",
         "\n",
         "<img align=\"left\" src=\"../assets/chessboard.png\" width=\"300\"/>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Antal riskorn i ruta n+1 ges av \n",
+        "\n",
+        "$ 2^n $"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# exempel\n",
+        "\n",
+        "print(2**0)        # antal riskorn i ruta 1\n",
+        "print(2**1)        # antal riskorn i ruta 2\n",
+        "print(2**2)        # antal riskorn i ruta 3\n",
+        "                   # ...\n",
+        "print(2**63)       # antal riskorn i ruta 64"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "total_number_of_rice = 0\n",
+        "\n",
+        "for n in range(0, 64):                               # loopa n mellan 0 och 63 (64 inkluderas inte)\n",
+        "\n",
+        "    rice_per_square = 2**n                           # beräkna antal riskorn för den givna rutan\n",
+        "\n",
+        "    total_number_of_rice += rice_per_square          # lägg till antalet i vår total\n",
+        "\n",
+        "print(f'Schackbrädet har totalt: {total_number_of_rice} riskorn')"
       ]
     },
     {
